<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.profile.UpdateProfileFragment">

    <ImageView
        android:id="@+id/ivBacktoProfile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProfile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/tvProfile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfile2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfileHome"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:background="@drawable/shape_image_view_border"
                android:src="@drawable/ic_profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etUsernameUpdate"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/etUsernameRegister"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivProfileHome" />

            <EditText
                android:id="@+id/etNameUpdate"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/etNameRegister"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etUsernameUpdate" />

            <EditText
                android:id="@+id/etEmailUpdate"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/etEmailRegister"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNameUpdate" />

            <EditText
                android:id="@+id/etBirthUpdate"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/etBirthRegister"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmailUpdate" />

            <EditText
                android:id="@+id/etAddressUpdate"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/etAddressRegister"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etBirthUpdate" />

            <Button
                android:id="@+id/btnSaveUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_edittext"
                android:text="@string/btnSaveUpdate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddressUpdate" />

            <TextView
                android:id="@+id/setdummy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSaveUpdate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>