<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/cardMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_outline"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivImageMovie"
            android:layout_width="100dp"
            android:layout_height="141dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tvTitleMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ivImageMovie"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/tvTitleMovie" />

        <TextView
            android:id="@+id/tvDateMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitleMovie"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/ivImageMovie"
            android:drawablePadding="2dp"
            android:textColor="@color/mustard"
            android:textSize="15sp"
            tools:text="@string/tvDateDetail" />

        <TextView
            android:id="@+id/tvRatingMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDateMovie"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ivImageMovie"
            android:drawablePadding="2dp"
            android:textColor="@color/mustard"
            android:textSize="15sp"
            tools:text="@string/tvRatingDetail" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>